syntax = "proto3";

service UserService{
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {}
}


message ListUsersRequest {
    string query = 1;
    int64 page_number = 2;
    int64 page_size = 3;
}

message ListUsersResponse{
    int64 code = 1;
    string message = 2;
    User data = 3;
}

message User{
    string name = 1;
    string username = 2;
    string email = 3;
    string phone = 4;
    enum sex{
        MAN = 0;
        WOMEN = 1;
    }
    int32 birthday = 5;
    bool is_vip = 6;
}